--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
-  dir: 'function/dir/from/repo/root'
 - name: 'gcr.io/cloud-builders/npm'
-  args: ['test']
-  dir: 'function/dir/from/repo/root'
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['deploy']
-  dir: 'function/dir/from/repo/root'
+  args: ["run", "create-env"]
+- name: "gcr.io/cloud-builders/gcloud"
+  args: ["app", "deploy", "-v", "$_GAE_VERSION"]
+timeout: "1600s"
