--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,5 +4,5 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ["run"]
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy",]
+  args: ["app", "deploy"]
 timeout: "1600s"
